# chibicc-py

./: .editorconfig  pyproject.toml
.github/workflows/: ci.yml
chibicc/: __main__.py  chibicc.py  write.py
chibicc/tests/: test_chibicc.py
