[tool.poetry]
name = "chibicc"
version = "0.1.0"
description = "rui314/chibicc but in Python"
authors = ["Kyle Coffey <me@phytolizer.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
